# bvh

./: .gitmodules  CMakeLists.txt  Makefile  PROJECT.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example.cpp  example.cu  example.py  example_barycentrics.py  example_cpu.cpp  example_cpu.py  example_double_intersection.py  example_gpu.cu  example_gpu.py  example_gpu_all.py  example_learning.py  example_mesh_sampler.py  example_primitives.py  example_segments.py  example_uv.py  example_vertex_color_interp.py
src/: bindings.cpp  bindings.cu  build.cpp  build.h  bvh.cpp  bvh.cu  bvh.h  cpu_traverse.cpp  cpu_traverse.h  cuda_compat.h  gpu_traverse.cu  gpu_traverse.cuh  main.cpp  material.h  mesh.cpp  mesh.h  mesh_sampler.cu  mesh_sampler.cuh  texture_loader.cpp  texture_loader.h  texture_sample.cpp  texture_sample.h  utils.cpp  utils.h
src/bvh/: __init__.py
src/mesh_utils/: __init__.py
tests/: test.py  test_segments.py
