[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "mesh_utils"
version = "0.0.1"
description = "Mesh Utils"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Alexander", email = "none" },
]
classifiers = [
    "License :: BSD",
]

[project.urls]
Homepage = "https://github.com/Alehandreus/mesh-utils"

[tool.scikit-build]
minimum-version = "0.4"

build-dir = "build/{wheel_tag}"

wheel.py-api = "cp312"
